<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="vs">VS</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="statistics">Your all time statistics</string>
    <string name="welcome">Welcome</string>
    <string name="intro">Instructions: select rock, paper or scissors to play.</string>
    <string name="computerWins">Computer wins!</string>
    <string name="youWins">You win!</string>
    <string name="draw">Draw</string>


</resources>