<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayFragment">

    <TextView
        android:id="@+id/tvGameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="statestiek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameResult" />

    <TextView
        android:id="@+id/tvVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/vs"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="84dp"
        android:layout_height="85dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tvVs"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWinner" />

    <ImageView
        android:id="@+id/ivYou"
        android:layout_width="84dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toEndOf="@+id/tvVs"
        app:layout_constraintTop_toBottomOf="@+id/tvWinner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/ivComputer"
        app:layout_constraintStart_toStartOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/ivYou"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/ivYou"
        app:layout_constraintTop_toBottomOf="@+id/ivYou" />

    <TextView
        android:id="@+id/tvWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Winner"
        app:layout_constraintBottom_toTopOf="@+id/tvVs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics"
        app:layout_constraintVertical_bias="0.688" />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:layout_marginStart="4dp"
        android:background="#673AB7"
        android:src="@drawable/rock"
        app:layout_constraintEnd_toStartOf="@+id/ivPaper"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPaper" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:layout_marginBottom="24dp"
        android:background="#673AB7"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVs"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivScissors"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:background="#673AB7"
        android:src="@drawable/rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/ivPaper"
        app:layout_constraintTop_toTopOf="@+id/ivPaper"
        tools:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="12dp"
        android:layout_marginTop="8dp"
        android:background="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>